external-crates/move/crates/move-compiler/tests/move_check/parser/let_else_unsupported_edition.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/let_else_unsupported_edition.move:5:22
  │
5 │         let x = 1u64 else { abort 0 };
  │                      ^^^^ 'let ... else' bindings are not supported by current edition 'legacy'; the '2024' edition supports this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.
